@@ -14,12 +14,12 @@ mod_description=Turn Minecraft into a Hack and Slash Looter!
 mod_icon=logo.png
 
 # Forge / Minecraft
-version_forge=1.14.4-28.1.26
+version_forge=1.14.4-28.1.40
 version_minecraft=1.14.4
-version_mcp=20190930-1.14.3
+version_mcp=20191007-1.14.3
 
 # Mod Dependencies
-version_curios=FORGE-1.14.4-1.0
+version_curios=FORGE-1.14.4-1.0.2
 version_autosave=1.14.2-1.0.1
 
 # Curse
