@@ -57,6 +57,7 @@ public class PerkEffects {
     public static HashMap<Elements, PerkEffectsWrapper> SPELL_DMG_PERCENT_MAP = new HashMap<>();
     public static HashMap<Elements, PerkEffectsWrapper> ATTACK_DAMAGE_PERCENT_MAP = new HashMap<>();
     public static HashMap<Elements, PerkEffectsWrapper> SPELL_TO_ATK_DAMAGE_MAP = new HashMap<>();
+    public static HashMap<Elements, PerkEffectsWrapper> SPELL_TO_ATK_DAMAGE_PERCENT_MAP = new HashMap<>();
     public static HashMap<Elements, PerkEffectsWrapper> All_ELE_DMG_MAP = new HashMap<>();
     public static HashMap<Elements, PerkEffectsWrapper> ELE_PENE_PERCENT_MAP = new HashMap<>();
 
@@ -118,8 +119,13 @@ public class PerkEffects {
 
             ATTACK_DAMAGE_PERCENT_MAP.put(ele, PerkEffectBuilder.build(ele.name()
                     .toLowerCase() + "_attack_dmg", new ElementalAttackDamage(ele), new ExactStatData(elenum, StatTypes.Percent, new ElementalAttackDamage(ele))));
+
             SPELL_TO_ATK_DAMAGE_MAP.put(ele, PerkEffectBuilder.build(ele.name()
                     .toLowerCase() + "_spell_to_attack_dmg", new ElementalSpellToAttackDMG(ele), new ExactStatData(elenum, StatTypes.Flat, new ElementalSpellToAttackDMG(ele))));
+
+            SPELL_TO_ATK_DAMAGE_PERCENT_MAP.put(ele, PerkEffectBuilder.build(ele.name()
+                    .toLowerCase() + "_spell_to_attack_dmg_percent", new ElementalSpellToAttackDMG(ele), new ExactStatData(10, StatTypes.Percent, new ElementalSpellToAttackDMG(ele))));
+
             All_ELE_DMG_MAP.put(ele, PerkEffectBuilder.build(ele.name()
                     .toLowerCase() + "_all_dmg", new AllElementalDamage(ele), new ExactStatData(elenum, StatTypes.Flat, new AllElementalDamage(ele))));
 
